<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/view_home">

    <fragment
        android:id="@+id/view_home"
        android:name="com.app.fitness.presenter.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/view_history"
        android:name="com.app.fitness.presenter.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_view_history_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.app.fitness.presenter.details.DetailsFragment"
        android:label="@string/Details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="sessionId"
            app:argType="integer" />
    </fragment>
</navigation>