<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00:00" />

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_distance"
        app:layout_constraintStart_toEndOf="@+id/tv_duration"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10222222" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_steps"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2000 M" />


    <TextView
        android:id="@+id/tv_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_duration"
        app:layout_constraintStart_toStartOf="@+id/tv_duration"
        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

    <TextView
        android:id="@+id/tv_steps_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/steps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_steps"
        app:layout_constraintStart_toStartOf="@+id/tv_steps"
        app:layout_constraintTop_toBottomOf="@+id/tv_steps" />

    <TextView
        android:id="@+id/tv_distance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/distance_m"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_distance"
        app:layout_constraintStart_toStartOf="@+id/tv_distance"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

    <View
        android:id="@+id/dividor"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>